# vLLM-deployment

./: .gitignore  Dockerfile  README.md  default.env  docker-compose.yml  environment.yml  example.ipynb  example.py  helper_args.json  pyproject.toml  vLLM_example_LangChain.py  vLLM_example_OpenAI.py
